data/derived/comb/progs/unify/prog7914.ml.out
Characters 38-58:
  if n > 0 then digitsOfInt(n/10)@[]
                ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
